azureps-cmdlets-docs/ServiceManagement/Azure.SQLDatabase/v3.0.0/Azure.SQLDatabase.md
---
Module Name: Azure.SQLDatabase
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
---

# Azure.SQLDatabase Module
## Description
This topic displays help topics for the Azure SQL Database Cmdlets.

The .dll file for this module is *Microsoft.WindowsAzure.Commands.SqlDatabase.dll*.

## Azure.SQLDatabase Cmdlets
### [Get-AzureSqlDatabaseCopy](./Get-AzureSqlDatabaseCopy.md)
Checks the status of copy relationships.


### [Get-AzureSqlDatabaseImportExportStatus](./Get-AzureSqlDatabaseImportExportStatus.md)
Gets the status of an import or export request.


### [Get-AzureSqlDatabaseOperation](./Get-AzureSqlDatabaseOperation.md)
Gets the status of database operations on an Azure server.


### [Get-AzureSqlDatabaseServerFirewallRule](./Get-AzureSqlDatabaseServerFirewallRule.md)
Gets firewall rules for Azure SQL Database Server.


### [Get-AzureSqlDatabaseServerQuota](./Get-AzureSqlDatabaseServerQuota.md)
Gets quota information for an Azure SQL Database server.


### [Get-AzureSqlDatabaseServer](./Get-AzureSqlDatabaseServer.md)
Gets information about Azure SQL Database servers.


### [Get-AzureSqlDatabaseServiceObjective](./Get-AzureSqlDatabaseServiceObjective.md)
Gets service objectives for an Azure SQL Database server.


### [Get-AzureSqlDatabaseUsages](./Get-AzureSqlDatabaseUsages.md)
Gets the size and size limit of a SQL Database.


### [Get-AzureSqlDatabase](./Get-AzureSqlDatabase.md)
Retrieves one or more databases.


### [Get-AzureSqlRecoverableDatabase](./Get-AzureSqlRecoverableDatabase.md)
Gets recoverable databases from a specified server.


### [New-AzureSqlDatabaseServerContext](./New-AzureSqlDatabaseServerContext.md)
Creates a server connection context.


### [New-AzureSqlDatabaseServerFirewallRule](./New-AzureSqlDatabaseServerFirewallRule.md)
Creates a firewall rule in Azure SQL Database Server.


### [New-AzureSqlDatabaseServer](./New-AzureSqlDatabaseServer.md)
Creates an Azure SQL Database server.


### [New-AzureSqlDatabase](./New-AzureSqlDatabase.md)
Creates an Azure SQL Database.


### [Remove-AzureSqlDatabaseServerFirewallRule](./Remove-AzureSqlDatabaseServerFirewallRule.md)
Removes a firewall rule from an Azure SQL Database server.


### [Remove-AzureSqlDatabaseServer](./Remove-AzureSqlDatabaseServer.md)
Removes an Azure SQL Database server.


### [Remove-AzureSqlDatabase](./Remove-AzureSqlDatabase.md)
Deletes an Azure SQL Database.


### [Set-AzureSqlDatabaseServerFirewallRule](./Set-AzureSqlDatabaseServerFirewallRule.md)
Modifies an existing firewall rule in an Azure SQL Database Server.


### [Set-AzureSqlDatabaseServer](./Set-AzureSqlDatabaseServer.md)
Modifies the properties of an Azure SQL Database server.


### [Set-AzureSqlDatabase](./Set-AzureSqlDatabase.md)
Sets properties for an Azure SQL Database.


### [Start-AzureSqlDatabaseCopy](./Start-AzureSqlDatabaseCopy.md)
Starts a copy operation of an Azure SQL Database.


### [Start-AzureSqlDatabaseExport](./Start-AzureSqlDatabaseExport.md)
Starts an export operation from an Azure SQL Database to Blob storage.


### [Start-AzureSqlDatabaseImport](./Start-AzureSqlDatabaseImport.md)
Starts an import operation from blob storage to an Azure SQL Database.


### [Start-AzureSqlDatabaseRecovery](./Start-AzureSqlDatabaseRecovery.md)
Initiates a restore request for a database.


### [Start-AzureSqlDatabaseRestore](./Start-AzureSqlDatabaseRestore.md)
Performs a point in time restore of a database.


### [Stop-AzureSqlDatabaseCopy](./Stop-AzureSqlDatabaseCopy.md)
Terminates a continuous copy relationship.



